adding regression support

--- a/tutorial/tutorial1_classification.ipynb
+++ b/tutorial/tutorial1_classification.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Neurosymbolic Software Tutorial - Classification\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/kavigupta/neurosym-lib/blob/main/tutorial/tutorial1_classification.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "## Instruction\n",
     "- Navigating this notebook on Google Colab: There will be text blocks and code blocks throughout the notebook. The text blocks, such as this one, will contain instructions and questions for you to consider. The code blocks, such as the one below, will contain executible code. Sometimes you will have to modify the code blocks following the instructions in the text blocks. You can run the code block by either pressing control/cmd + enter or by clicking the arrow on left-hand side as shown. `@TODO`\n",
     "- Saving Work: If you wish to save your work in this .ipynb, we recommend downloading the compressed repository from GitHub, unzipping it, uploading it to Google Drive, and opening this notebook from within Google Drive.\n",
@@ -178,6 +182,12 @@
     "### Exersise\n",
     "\n",
     "*Observe the scatterplot above. Hypothesize what underlying function would allow us to generate this data. Concretely, write down the mathematical operators (`sin`, `pow`, `exp`, etc.) that would be useful to discover the underlying function.*\n",
+    "\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Spoiler! Click to see the answer!</summary>\n",
+    "  y is 0 if the point is in the first or second quadrant (where x >= 0), and 1 otherwise. The point of inflection changes slightly depending on data distribution.\n",
+    "</details>\n",
     "\n",
     "\n",
     "Some useful operators are:\n",
