--- a/tutorial/tutorial1_regression.ipynb
+++ b/tutorial/tutorial1_regression.ipynb
@@ -376,7 +376,7 @@
     "    train_steps=len(datamodule.train),\n",
     "    loss_callback=regression_smooth_l1_loss,\n",
     "    scheduler='none',\n",
-    "    optimizer='Adam',\n",
+    "    optimizer=torch.optim.Adam,\n",
     ")\n",
     "\n",
     "def validation_cost(node):\n",
