--- a/tutorial/discrete_exercise_solutions.ipynb
+++ b/tutorial/discrete_exercise_solutions.ipynb
@@ -26,6 +26,94 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: neurosym in /home/kavi/mit/neurosym-lib (0.0.60)\n",
+      "Requirement already satisfied: frozendict==2.3.8 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (2.3.8)\n",
+      "Requirement already satisfied: torch in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (2.0.1)\n",
+      "Requirement already satisfied: torchvision in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (0.15.2)\n",
+      "Requirement already satisfied: torchaudio in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (2.0.2)\n",
+      "Requirement already satisfied: numpy in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (1.26.3)\n",
+      "Requirement already satisfied: pytorch-lightning in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (2.2.3)\n",
+      "Requirement already satisfied: permacache in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (3.7.0)\n",
+      "Requirement already satisfied: requests in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (2.31.0)\n",
+      "Requirement already satisfied: stitch-core==0.1.25 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (0.1.25)\n",
+      "Requirement already satisfied: scikit-learn in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (1.3.0)\n",
+      "Requirement already satisfied: s-exp-parser==1.3.1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (1.3.1)\n",
+      "Requirement already satisfied: increase_recursionlimit==1.0.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (1.0.0)\n",
+      "Requirement already satisfied: no_toplevel_code==1.0.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (1.0.0)\n",
+      "Requirement already satisfied: ast-scope==0.4.3 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from neurosym) (0.4.3)\n",
+      "Collecting attrs==19.3.0 (from ast-scope==0.4.3->neurosym)\n",
+      "  Using cached attrs-19.3.0-py2.py3-none-any.whl.metadata (9.0 kB)\n",
+      "Requirement already satisfied: filelock>=3.0.12 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from permacache->neurosym) (3.12.3)\n",
+      "Requirement already satisfied: appdirs>=1.4.4 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from permacache->neurosym) (1.4.4)\n",
+      "Requirement already satisfied: tqdm>=4.57.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (4.66.1)\n",
+      "Requirement already satisfied: PyYAML>=5.4 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (6.0.1)\n",
+      "Requirement already satisfied: fsspec>=2022.5.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (2023.9.0)\n",
+      "Requirement already satisfied: torchmetrics>=0.7.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (1.1.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (23.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (4.7.1)\n",
+      "Requirement already satisfied: lightning-utilities>=0.8.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from pytorch-lightning->neurosym) (0.11.2)\n",
+      "Requirement already satisfied: sympy in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (1.12)\n",
+      "Requirement already satisfied: networkx in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (3.1)\n",
+      "Requirement already satisfied: jinja2 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (3.1.2)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu11==11.7.99 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.7.99)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu11==11.7.99 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.7.99)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu11==11.7.101 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.7.101)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu11==8.5.0.96 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (8.5.0.96)\n",
+      "Requirement already satisfied: nvidia-cublas-cu11==11.10.3.66 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.10.3.66)\n",
+      "Requirement already satisfied: nvidia-cufft-cu11==10.9.0.58 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (10.9.0.58)\n",
+      "Requirement already satisfied: nvidia-curand-cu11==10.2.10.91 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (10.2.10.91)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu11==11.4.0.1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.4.0.1)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu11==11.7.4.91 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.7.4.91)\n",
+      "Requirement already satisfied: nvidia-nccl-cu11==2.14.3 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (2.14.3)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu11==11.7.91 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (11.7.91)\n",
+      "Requirement already satisfied: triton==2.0.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torch->neurosym) (2.0.0)\n",
+      "Requirement already satisfied: setuptools in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from nvidia-cublas-cu11==11.10.3.66->torch->neurosym) (68.0.0)\n",
+      "Requirement already satisfied: wheel in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from nvidia-cublas-cu11==11.10.3.66->torch->neurosym) (0.38.4)\n",
+      "Requirement already satisfied: cmake in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from triton==2.0.0->torch->neurosym) (3.27.2)\n",
+      "Requirement already satisfied: lit in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from triton==2.0.0->torch->neurosym) (16.0.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from requests->neurosym) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from requests->neurosym) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from requests->neurosym) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from requests->neurosym) (2023.11.17)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from scikit-learn->neurosym) (1.11.2)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from scikit-learn->neurosym) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from scikit-learn->neurosym) (3.2.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from torchvision->neurosym) (10.0.0)\n",
+      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (3.8.5)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from jinja2->torch->neurosym) (2.1.3)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from sympy->torch->neurosym) (1.3.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (6.0.4)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (4.0.3)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (1.9.2)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (1.4.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/kavi/anaconda3/envs/py311/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2022.5.0->pytorch-lightning->neurosym) (1.3.1)\n",
+      "Using cached attrs-19.3.0-py2.py3-none-any.whl (39 kB)\n",
+      "Installing collected packages: attrs\n",
+      "  Attempting uninstall: attrs\n",
+      "    Found existing installation: attrs 23.2.0\n",
+      "    Uninstalling attrs-23.2.0:\n",
+      "      Successfully uninstalled attrs-23.2.0\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "referencing 0.30.2 requires attrs>=22.2.0, but you have attrs 19.3.0 which is incompatible.\n",
+      "jsonschema 4.19.0 requires attrs>=22.2.0, but you have attrs 19.3.0 which is incompatible.\n",
+      "imperative-stitch 3.6.15 requires neurosym==0.0.47, but you have neurosym 0.0.60 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed attrs-19.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install neurosym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -64,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +431,7 @@
        "'(lam (- (1) (** (sin ($0_0)) (2))))'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +781,7 @@
        "'(Module~M (/seq~seqS~3 (Assign~S (list~_L_~1 (Name~L (const-&x:0~Name) (Store~Ctx))) (Constant~E (const-i2~Const) (const-None~ConstKind)) (const-None~TC)) (Assign~S (list~_L_~1 (Name~L (const-&y:0~Name) (Store~Ctx))) (BinOp~E (Constant~E (const-i2~Const) (const-None~ConstKind)) (Add~O) (Name~E (const-&x:0~Name) (Load~Ctx))) (const-None~TC)) (Assign~S (list~_L_~1 (Name~L (const-&z:0~Name) (Store~Ctx))) (BinOp~E (Name~E (const-&x:0~Name) (Load~Ctx)) (Add~O) (Name~E (const-&y:0~Name) (Load~Ctx))) (const-None~TC))) (list~_TI_~0))'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -808,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
