--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -39,12 +39,8 @@
     "\n",
     "import neurosym as ns\n",
     "from neurosym.examples import near\n",
-    "from neurosym.examples.near.operations.basic import ite_torch\n",
-    "from neurosym.examples.near.operations.lists import map_torch\n",
     "\n",
-    "from neurosym.datasets.load_data import DatasetFromNpy, DatasetWrapper\n",
-    "from neurosym.utils.imports import import_pytorch_lightning\n",
-    "pl = import_pytorch_lightning()\n"
+    "pl = ns.import_pytorch_lightning()\n"
    ]
   },
   {
@@ -62,13 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_factory = lambda train_seed: DatasetWrapper(\n",
-    "    DatasetFromNpy(\n",
+    "dataset_factory = lambda train_seed: ns.DatasetWrapper(\n",
+    "    ns.DatasetFromNpy(\n",
     "        f\"bouncing_ball_exercise/data/bounce_example/train_ex_data.npy\",\n",
     "        f\"bouncing_ball_exercise/data/bounce_example/train_ex_labels.npy\",\n",
     "        train_seed,\n",
     "    ),\n",
-    "    DatasetFromNpy(\n",
+    "    ns.DatasetFromNpy(\n",
     "        f\"bouncing_ball_exercise/data/bounce_example/test_ex_data.npy\",\n",
     "        f\"bouncing_ball_exercise/data/bounce_example/test_ex_labels.npy\",\n",
     "        None,\n",
@@ -357,13 +353,6 @@
     "plt.title(\"Bouncing ball (ground truth in black)\")\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
