proper skeleton for regression notebook

--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -227,6 +227,7 @@
     "    dslf = DSLFactory(L=L, O=O, max_overall_depth=5)\n",
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
+    "    # BEGIN SOLUTION \"YOUR CODE HERE\"\n",
     "    # dslf.concrete(\"add\", \"() -> ($fL, $fL) -> $fL\", lambda: lambda x, y: x + y)\n",
     "    # dslf.concrete(\"mul\", \"() -> ($fL, $fL) -> $fL\", lambda: lambda x, y: x * y)\n",
     "    # dslf.concrete(\"fold\", \"((#a, #a) -> #a) -> [#a] -> #a\", lambda f: lambda x: fold_torch(f, x))\n",
@@ -239,6 +240,7 @@
     "    dslf.concrete(\"ite\", \"(#a -> f, #a -> #a, #a -> #a) -> #a -> #a\", lambda cond, fx, fy: ite_torch(cond, fx, fy))\n",
     "    dslf.concrete(\"map\", \"(#a -> #b) -> [#a] -> [#b]\", lambda f: lambda x: map_torch(f, x))\n",
     "    # dslf.concrete(\"compose\", \"(#a -> #b, #b -> #c) -> #a -> #c\", lambda f, g: lambda x: g(f(x)))\n",
+    "    # END SOLUTION\n",
     "    \n",
     "    dslf.prune_to(\"[{f, $L}] -> [{f, $O}]\")\n",
     "    return dslf.finalize()\n",
@@ -367,9 +369,11 @@
     "    using MSE loss when L1 distance is less than beta and a diminished \n",
     "    L1 loss otherwise.\n",
     "    \"\"\"\n",
+    "    # BEGIN SOLUTION \"YOUR CODE HERE\"\n",
     "    predictions = predictions.view(-1, predictions.shape[-1])\n",
     "    targets = targets.view(-1, targets.shape[-1])\n",
     "    return torch.nn.functional.smooth_l1_loss(predictions, targets, beta=1.0)\n",
+    "    # END SOLUTION\n",
     "\n",
     "trainer_cfg = near.NEARTrainerConfig(\n",
     "    lr=1e-3,\n",
@@ -497,6 +501,7 @@
     }
    ],
    "source": [
+    "# BEGIN SOLUTION g = ______ # TODO: Instantiate the search graph\n",
     "g = near.near_graph(\n",
     "    neural_dsl,\n",
     "    ns.parse_type(\n",
@@ -504,8 +509,11 @@
     "    ),\n",
     "    is_goal=neural_dsl.program_has_no_holes,\n",
     ")\n",
+    "# END SOLUTION\n",
     "\n",
+    "# BEGIN SOLUTION iterator = ______ # TODO: Instantiate the bounded astar search algorithm\n",
     "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=7)\n",
+    "# END SOLUTION\n",
     "best_program_nodes = []\n",
     "# Let's collect the top four programs\n",
     "while len(best_program_nodes) <= 3:\n",
@@ -678,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
