Tutorial notebook import tests (#152)

--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -187,12 +187,11 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "from neurosym.dsl.dsl_factory import DSLFactory\n",
-    "from neurosym.examples.near.operations.basic import ite_torch\n",
-    "from neurosym.examples.near.operations.lists import fold_torch, map_torch\n",
+    "import neurosym as ns\n",
+    "from neurosym.examples import near\n",
     "\n",
     "def simple_dsl(L, O):\n",
-    "    dslf = DSLFactory(L=L, O=O, max_overall_depth=5)\n",
+    "    dslf = ns.DSLFactory(L=L, O=O, max_overall_depth=5)\n",
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
     "    \"YOUR CODE HERE\"\n",
@@ -233,16 +232,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurosym.datasets.load_data import DatasetFromNpy, DatasetWrapper\n",
-    "\n",
     "def dataset_factory(train_seed):\n",
-    "    return DatasetWrapper(\n",
-    "        DatasetFromNpy(\n",
+    "    return ns.DatasetWrapper(\n",
+    "        ns.DatasetFromNpy(\n",
     "            \"../data/regression_example/train_ex_data.npy\",\n",
     "            \"../data/regression_example/train_ex_labels.npy\",\n",
     "            train_seed,\n",
     "        ),\n",
-    "        DatasetFromNpy(\n",
+    "        ns.DatasetFromNpy(\n",
     "            \"../data/regression_example/test_ex_data.npy\",\n",
     "            \"../data/regression_example/test_ex_labels.npy\",\n",
     "            None,\n",
@@ -264,9 +261,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import neurosym as ns\n",
-    "from neurosym.examples import near\n",
-    "\n",
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
     "t.typedef(\"fO\", \"{f, $O}\")\n",
@@ -293,10 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurosym.utils.imports import import_pytorch_lightning\n",
-    "\n",
-    "\n",
-    "pl = import_pytorch_lightning()\n",
+    "pl = ns.import_pytorch_lightning()\n",
     "def regression_mse_loss(\n",
     "    predictions: torch.Tensor, targets: torch.Tensor\n",
     ") -> torch.Tensor:\n",
@@ -458,6 +449,13 @@
     "plt.ylabel(\"Y-axis\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
