[BREAKING] Replacing depth computer functionality with specialized FilterUnexpandableNodes for NEAR

--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -5677,15 +5677,17 @@
     }
    ],
    "source": [
+    "max_depth = 3\n",
     "g = near.near_graph(\n",
     "    neural_dsl,\n",
     "    ns.parse_type(\n",
     "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "    ),\n",
     "    is_goal=neural_dsl.program_has_no_holes,\n",
+    "    max_depth=max_depth\n",
     ")\n",
     "\n",
-    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=3)\n",
+    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
     "best_program_node = None\n",
     "try:\n",
     "    node = next(iterator)\n",
