--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -222,6 +222,7 @@
    "outputs": [],
    "source": [
     "input_dim, output_dim = 4, 4\n",
+    "max_depth = 16\n",
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
@@ -272,6 +273,7 @@
     "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "    ),\n",
     "    is_goal=neural_dsl.program_has_no_holes,\n",
+    "    max_depth=max_depth\n",
     ")\n"
    ]
   },
@@ -1622,7 +1624,7 @@
     }
    ],
    "source": [
-    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=16)\n",
+    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
     "best_program_nodes = []\n",
     "# Let's collect the top four programs\n",
     "while len(best_program_nodes) <= 3:\n",
