--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -36029,17 +36029,19 @@
    ],
    "source": [
     "# BEGIN SOLUTION g = ______ # TODO: Instantiate the search graph\n",
+    "max_depth = 7\n",
     "g = near.near_graph(\n",
     "    neural_dsl,\n",
     "    ns.parse_type(\n",
     "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "    ),\n",
     "    is_goal=neural_dsl.program_has_no_holes,\n",
+    "    max_depth=max_depth,\n",
     ")\n",
     "# END SOLUTION\n",
     "\n",
     "# BEGIN SOLUTION iterator = ______ # TODO: Instantiate the bounded astar search algorithm\n",
-    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=7)\n",
+    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
     "# END SOLUTION\n",
     "best_program_nodes = []\n",
     "# Let's collect the top four programs\n",
