--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Neurosymbolic Software Tutorial - Regression - Solutions\n",
     "\n",
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/kavigupta/neurosym-lib/blob/main/tutorial/near_demo_regression.ipynb\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/kavigupta/neurosym-lib/blob/main/tutorial/near_demo_regression_solutions.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
@@ -50,7 +50,10 @@
     "%autoreload 2\n",
     "import os\n",
     "import numpy as np\n",
+    "\n",
     "IS_REGRESSION = True\n",
+    "\n",
+    "\n",
     "def datagen(B, T, *, seed, is_regression=False):\n",
     "    rng = np.random.RandomState(seed)\n",
     "    # generates a numpy trajectory of shape\n",
@@ -62,7 +65,7 @@
     "    X[:, 0, :] = 0\n",
     "    for t in range(1, T):\n",
     "        step = rng.randn(B, 2) * 0.2\n",
-    "        X[:, t, :] = X[:, t-1, :] + step\n",
+    "        X[:, t, :] = X[:, t - 1, :] + step\n",
     "    X = X.astype(np.float32)\n",
     "\n",
     "    # normalize X b/w -1 and 1\n",
@@ -91,20 +94,21 @@
     "                    Y[i, j] = 0\n",
     "                elif x < 0 and y < 0:\n",
     "                    Y[i, j] = 1\n",
-    "                else: # x > 0 and y < 0\n",
+    "                else:  # x > 0 and y < 0\n",
     "                    Y[i, j] = 1\n",
     "        Y = Y.reshape(B, T, 1)\n",
     "\n",
     "    return X, Y\n",
     "\n",
+    "\n",
     "X_train, y_train = datagen(1000, 10, is_regression=IS_REGRESSION, seed=1)\n",
     "X_test, y_test = datagen(50, 10, is_regression=IS_REGRESSION, seed=0)\n",
     "# save data\n",
-    "os.makedirs('../data/regression_example/', exist_ok=True)\n",
-    "np.save('../data/regression_example/train_ex_data.npy', X_train)\n",
-    "np.save('../data/regression_example/train_ex_labels.npy', y_train)\n",
-    "np.save('../data/regression_example/test_ex_data.npy', X_test)\n",
-    "np.save('../data/regression_example/test_ex_labels.npy', y_test)\n"
+    "os.makedirs(\"../data/regression_example/\", exist_ok=True)\n",
+    "np.save(\"../data/regression_example/train_ex_data.npy\", X_train)\n",
+    "np.save(\"../data/regression_example/train_ex_labels.npy\", y_train)\n",
+    "np.save(\"../data/regression_example/test_ex_data.npy\", X_test)\n",
+    "np.save(\"../data/regression_example/test_ex_labels.npy\", y_test)"
    ]
   },
   {
@@ -128,28 +132,36 @@
     "import matplotlib\n",
     "from matplotlib.colors import Normalize\n",
     "\n",
+    "\n",
     "def plot_trajectory(X, Y, is_regression=False):\n",
     "    B, T, _ = X.shape\n",
-    "    \n",
+    "\n",
     "    if is_regression:\n",
-    "        cmap_name = 'jet'\n",
+    "        cmap_name = \"jet\"\n",
     "        colorbar_label = \"Distance from origin\"\n",
     "        title = \"Trajectories and their distances from origin\"\n",
     "        norm = Normalize(vmin=Y.min(), vmax=Y.max())\n",
     "    else:\n",
-    "        cmap_name = 'jet'\n",
+    "        cmap_name = \"jet\"\n",
     "        colorbar_label = \"Quadrant\"\n",
     "        title = \"Trajectories and their quadrants\"\n",
     "        norm = Normalize(vmin=Y.min(), vmax=Y.max())\n",
-    "    \n",
+    "\n",
     "    for b in range(B):\n",
     "        trajectory = X[b]\n",
     "        output = Y[b].squeeze()\n",
     "\n",
-    "        plt.scatter(trajectory[:, 0], trajectory[:, 1], c=output, marker='o', cmap=cmap_name, norm=norm)\n",
-    "        \n",
-    "        plt.plot(trajectory[:, 0], trajectory[:, 1], alpha=0.2, color='gray')\n",
-    "    \n",
+    "        plt.scatter(\n",
+    "            trajectory[:, 0],\n",
+    "            trajectory[:, 1],\n",
+    "            c=output,\n",
+    "            marker=\"o\",\n",
+    "            cmap=cmap_name,\n",
+    "            norm=norm,\n",
+    "        )\n",
+    "\n",
+    "        plt.plot(trajectory[:, 0], trajectory[:, 1], alpha=0.2, color=\"gray\")\n",
+    "\n",
     "    plt.colorbar(label=colorbar_label)\n",
     "    plt.title(title)\n",
     "    plt.xlim(-1, 1)\n",
@@ -157,8 +169,9 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "# Hope its clear that we are trying to predict the distance from origin\n",
-    "plot_trajectory(X_test, y_test, is_regression=IS_REGRESSION)\n"
+    "plot_trajectory(X_test, y_test, is_regression=IS_REGRESSION)"
    ]
   },
   {
@@ -214,6 +227,7 @@
     "import neurosym as ns\n",
     "from neurosym.examples import near\n",
     "\n",
+    "\n",
     "def simple_dsl(L, O):\n",
     "    dslf = ns.DSLFactory(L=L, O=O, max_overall_depth=5)\n",
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
@@ -222,19 +236,44 @@
     "    # dslf.concrete(\"add\", \"() -> ($fL, $fL) -> $fL\", lambda: lambda x, y: x + y)\n",
     "    # dslf.concrete(\"mul\", \"() -> ($fL, $fL) -> $fL\", lambda: lambda x, y: x * y)\n",
     "    # dslf.concrete(\"fold\", \"((#a, #a) -> #a) -> [#a] -> #a\", lambda f: lambda x: near.operations.fold_torch(f, x))\n",
-    "    dslf.concrete(\"sum\", \"() -> $fL -> f\", lambda: lambda x: torch.sum(x, dim=-1).unsqueeze(-1))\n",
+    "    dslf.concrete(\n",
+    "        \"sum\",\n",
+    "        \"() -> $fL -> {f, 1}\",\n",
+    "        lambda: lambda x: torch.sum(x, dim=-1).unsqueeze(-1),\n",
+    "    )\n",
     "\n",
-    "    dslf.parameterized(\"linear_bool\", \"() -> $fL -> f\", lambda lin: lin, dict(lin=lambda: nn.Linear(L, 1)))\n",
-    "    dslf.parameterized(\"linear\", \"() -> $fL -> $fL\", lambda lin: lin, dict(lin=lambda: nn.Linear(L, L)))\n",
-    "    dslf.parameterized(\"output\", \"(([$fL]) -> [$fL]) -> [$fL] -> [{f, $O}]\", lambda f, lin: lambda x: lin(f(x)), dict(lin=lambda: nn.Linear(L, O)))\n",
+    "    dslf.parameterized(\n",
+    "        \"linear_bool\",\n",
+    "        \"() -> $fL -> {f, 1}\",\n",
+    "        lambda lin: lin,\n",
+    "        dict(lin=lambda: nn.Linear(L, 1)),\n",
+    "    )\n",
+    "    dslf.parameterized(\n",
+    "        \"linear\", \"() -> $fL -> $fL\", lambda lin: lin, dict(lin=lambda: nn.Linear(L, L))\n",
+    "    )\n",
+    "    dslf.parameterized(\n",
+    "        \"output\",\n",
+    "        \"(([$fL]) -> [$fL]) -> [$fL] -> [{f, $O}]\",\n",
+    "        lambda f, lin: lambda x: lin(f(x)),\n",
+    "        dict(lin=lambda: nn.Linear(L, O)),\n",
+    "    )\n",
     "\n",
-    "    dslf.concrete(\"ite\", \"(#a -> f, #a -> #a, #a -> #a) -> #a -> #a\", lambda cond, fx, fy: near.operations.ite_torch(cond, fx, fy))\n",
-    "    dslf.concrete(\"map\", \"(#a -> #b) -> [#a] -> [#b]\", lambda f: lambda x: near.operations.map_torch(f, x))\n",
+    "    dslf.concrete(\n",
+    "        \"ite\",\n",
+    "        \"(#a -> {f, 1}, #a -> #a, #a -> #a) -> #a -> #a\",\n",
+    "        lambda cond, fx, fy: near.operations.ite_torch(cond, fx, fy),\n",
+    "    )\n",
+    "    dslf.concrete(\n",
+    "        \"map\",\n",
+    "        \"(#a -> #b) -> [#a] -> [#b]\",\n",
+    "        lambda f: lambda x: near.operations.map_torch(f, x),\n",
+    "    )\n",
     "    # dslf.concrete(\"compose\", \"(#a -> #b, #b -> #c) -> #a -> #c\", lambda f, g: lambda x: g(f(x)))\n",
     "    # END SOLUTION\n",
-    "    \n",
+    "\n",
     "    dslf.prune_to(\"[{f, $L}] -> [{f, $O}]\")\n",
     "    return dslf.finalize()\n",
+    "\n",
     "\n",
     "dsl = simple_dsl(X_test.shape[-1], y_test.shape[-1])\n",
     "print(dsl.render())"
@@ -314,16 +353,21 @@
     "    modules={\n",
     "        **near.create_modules(\n",
     "            \"mlp\",\n",
-    "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\")],\n",
+    "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\"), t(\"($fL) -> {f, 1}\")],\n",
     "            near.mlp_factory(hidden_size=10),\n",
     "        ),\n",
     "        **near.create_modules(\n",
     "            \"rnn_seq2seq\",\n",
-    "            [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\")],\n",
+    "            [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\"), t(\"([$fL]) -> [{f, 1}]\")],\n",
     "            near.rnn_factory_seq2seq(hidden_size=10),\n",
     "        ),\n",
+    "        **near.create_modules(\n",
+    "            \"rnn_seq2class\",\n",
+    "            [t(\"([$fL]) -> $fL\"), t(\"([$fL]) -> {f, 1}\")],\n",
+    "            near.rnn_factory_seq2class(hidden_size=10),\n",
+    "        ),\n",
     "    },\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -333,6 +377,8 @@
    "outputs": [],
    "source": [
     "pl = ns.import_pytorch_lightning()\n",
+    "\n",
+    "\n",
     "def regression_mse_loss(\n",
     "    predictions: torch.Tensor, targets: torch.Tensor\n",
     ") -> torch.Tensor:\n",
@@ -349,7 +395,7 @@
     ") -> torch.Tensor:\n",
     "    \"\"\"\n",
     "    MSE loss is sensitive to outliers. Smooth L1 loss deals with outliers by\n",
-    "    using MSE loss when L1 distance is less than beta and a diminished \n",
+    "    using MSE loss when L1 distance is less than beta and a diminished\n",
     "    L1 loss otherwise.\n",
     "    \"\"\"\n",
     "    # BEGIN SOLUTION \"YOUR CODE HERE\"\n",
@@ -358,6 +404,7 @@
     "    return torch.nn.functional.smooth_l1_loss(predictions, targets, beta=1.0)\n",
     "    # END SOLUTION\n",
     "\n",
+    "\n",
     "trainer_cfg = near.NEARTrainerConfig(\n",
     "    lr=1e-3,\n",
     "    max_seq_len=100,\n",
@@ -365,7 +412,7 @@
     "    num_labels=output_dim,\n",
     "    train_steps=len(datamodule.train),\n",
     "    loss_callback=regression_smooth_l1_loss,\n",
-    "    scheduler='none',\n",
+    "    scheduler=\"none\",\n",
     "    optimizer=torch.optim.Adam,\n",
     ")\n",
     "\n",
@@ -36100,27 +36147,46 @@
     "        fig, ax = plt.subplots(figsize=(5, 5))\n",
     "        ax.set_axis_off()\n",
     "\n",
-    "    ax.text(x, y, sexpr.symbol, ha='center', va='center',\n",
-    "            bbox=dict(facecolor='white', edgecolor='black', boxstyle='round,pad=0.5'))\n",
+    "    ax.text(\n",
+    "        x,\n",
+    "        y,\n",
+    "        sexpr.symbol,\n",
+    "        ha=\"center\",\n",
+    "        va=\"center\",\n",
+    "        bbox=dict(facecolor=\"white\", edgecolor=\"black\", boxstyle=\"round,pad=0.5\"),\n",
+    "    )\n",
     "\n",
     "    num_children = len(sexpr.children)\n",
     "    if num_children > 0:\n",
     "        child_y = y - 1 / level\n",
     "        for i, child in enumerate(sexpr.children):\n",
     "            child_x = x - (dx * (num_children - 1) / 2) + i * dx\n",
-    "            ax.plot([x, child_x], [y - text_offset, child_y + text_offset], 'k-')\n",
-    "            plot_expression(child, x=child_x, y=child_y, level=level + 1, dx=dx / 2, ax=ax, text_offset=text_offset)\n",
+    "            ax.plot([x, child_x], [y - text_offset, child_y + text_offset], \"k-\")\n",
+    "            plot_expression(\n",
+    "                child,\n",
+    "                x=child_x,\n",
+    "                y=child_y,\n",
+    "                level=level + 1,\n",
+    "                dx=dx / 2,\n",
+    "                ax=ax,\n",
+    "                text_offset=text_offset,\n",
+    "            )\n",
     "\n",
     "    if ax is None:\n",
     "        plt.show()\n",
     "\n",
+    "\n",
     "best_program_nodes = sorted(best_program_nodes, key=lambda x: x[1])\n",
     "for i, (node, cost) in enumerate(best_program_nodes):\n",
-    "    print(\"({i}) Cost: {cost:.4f}, {program}\".format(i=i, program=ns.render_s_expression(node.program), cost=cost))\n",
+    "    print(\n",
+    "        \"({i}) Cost: {cost:.4f}, {program}\".format(\n",
+    "            i=i, program=ns.render_s_expression(node.program), cost=cost\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "best_program_node = best_program_nodes[0]\n",
     "print(ns.render_s_expression(best_program_node[0].program))\n",
-    "plot_expression(best_program_node[0].program)\n"
+    "plot_expression(best_program_node[0].program)"
    ]
   },
   {
@@ -36157,15 +36223,13 @@
     "    deterministic=True,\n",
     ")\n",
     "\n",
-    "trainer.fit(\n",
-    "    pl_model, datamodule.train_dataloader(), datamodule.val_dataloader()\n",
-    ")\n",
+    "trainer.fit(pl_model, datamodule.train_dataloader(), datamodule.val_dataloader())\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
     "\n",
     "X = np.stack([xx, yy], axis=-1)\n",
-    "X = X.reshape(-1, 2)    \n",
+    "X = X.reshape(-1, 2)\n",
     "X = torch.tensor(X, dtype=torch.float32)\n",
     "Y = module(X.unsqueeze(0)).squeeze(0)\n",
     "Y = Y.detach().numpy()\n",
@@ -36173,12 +36237,16 @@
     "y = Y\n",
     "# Using imshow to plot y as a heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.imshow(y, origin='lower', extent=(-3, 3, -3, 3), cmap='viridis')\n",
+    "plt.imshow(y, origin=\"lower\", extent=(-3, 3, -3, 3), cmap=\"viridis\")\n",
     "plt.colorbar(label=\"Distance from origin\")\n",
-    "plt.title(\"Output heatmap\\n{program}\".format(program=ns.render_s_expression(best_program_node[0].program)))\n",
+    "plt.title(\n",
+    "    \"Output heatmap\\n{program}\".format(\n",
+    "        program=ns.render_s_expression(best_program_node[0].program)\n",
+    "    )\n",
+    ")\n",
     "plt.xlabel(\"X-axis\")\n",
     "plt.ylabel(\"Y-axis\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
