--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -255,7 +255,8 @@
     "best_programs = interface.fit(\n",
     "    datamodule=datamodule,\n",
     "    program_signature=\"([{f, $L}]) -> [{f, $O}]\",\n",
-    "    n_programs=4\n",
+    "    n_programs=4,\n",
+    "    validation_max_epochs=4000,\n",
     ")"
    ]
   },
@@ -281,7 +282,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_program_nodes = [(p, None) for p in best_programs]"
+    "def program_to_trajectory(best_program):\n",
+    "    T = 100\n",
+    "    path = np.zeros((T, 4))\n",
+    "    X = torch.tensor(\n",
+    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
+    "    )\n",
+    "    for t in range(T):\n",
+    "        path[t, :] = X.detach().numpy()\n",
+    "        Y = best_program(X.unsqueeze(0)).squeeze(0)\n",
+    "        X = Y\n",
+    "    return path"
    ]
   },
   {
@@ -290,35 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def testProgram(best_program_node):\n",
-    "    module = interface.train_program(\n",
-    "        best_program_node[0].program,\n",
-    "        datamodule,\n",
-    "        max_epochs=4000,\n",
-    "        callbacks=[\n",
-    "            pl.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=1e-4, patience=5)\n",
-    "        ],\n",
-    "        enable_progress_bar=False,\n",
-    "    )\n",
-    "    T = 100\n",
-    "    path = np.zeros((T, 4))\n",
-    "    X = torch.tensor(\n",
-    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
-    "    )\n",
-    "    for t in range(T):\n",
-    "        path[t, :] = X.detach().numpy()\n",
-    "        Y = module(X.unsqueeze(0)).squeeze(0)\n",
-    "        X = Y\n",
-    "    return path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trajectories = [testProgram(prog) for prog in best_program_nodes]"
+    "trajectories = [program_to_trajectory(prog) for prog in best_programs]"
    ]
   },
   {
@@ -330,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
