--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -377,9 +377,13 @@
       "(2) Cost: 5.7648, (map (ite (linear_bool) (ite (linear_bool) (linear) (linear)) (linear)))\n",
       "(3) Cost: 6.6546, (map (linear))\n",
       "Validating (map (ite (linear_bool) (linear) (linear)))\n",
+      "Training (map (ite (linear_bool) (linear) (linear)))\n",
       "Validating (map (ite (linear_bool) (linear) (ite (linear_bool) (linear) (linear))))\n",
+      "Training (map (ite (linear_bool) (linear) (ite (linear_bool) (linear) (linear))))\n",
       "Validating (map (ite (linear_bool) (ite (linear_bool) (linear) (linear)) (linear)))\n",
-      "Validating (map (linear))\n"
+      "Training (map (ite (linear_bool) (ite (linear_bool) (linear) (linear)) (linear)))\n",
+      "Validating (map (linear))\n",
+      "Training (map (linear))\n"
      ]
     }
    ],
