--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -255,7 +255,8 @@
     "best_programs = interface.fit(\n",
     "    datamodule=datamodule,\n",
     "    program_signature=\"([{f, $L}]) -> [{f, $O}]\",\n",
-    "    n_programs=4\n",
+    "    n_programs=4,\n",
+    "    validation_max_epochs=4000,\n",
     ")"
    ]
   },
@@ -281,25 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_program_nodes = [(p, None) for p in best_programs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def testProgram(best_program_node):\n",
-    "    module = interface.train_program(\n",
-    "        best_program_node[0].program,\n",
-    "        datamodule,\n",
-    "        max_epochs=4000,\n",
-    "        callbacks=[\n",
-    "            pl.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=1e-4, patience=5)\n",
-    "        ],\n",
-    "        enable_progress_bar=False,\n",
-    "    )\n",
+    "def program_to_trajectory(best_program):\n",
     "    T = 100\n",
     "    path = np.zeros((T, 4))\n",
     "    X = torch.tensor(\n",
@@ -314,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
