add environment = [] calls

--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -422,7 +422,7 @@
     "    )\n",
     "    for t in range(T):\n",
     "        path[t, :] = X.detach().numpy()\n",
-    "        Y = best_program(X.unsqueeze(0)).squeeze(0)\n",
+    "        Y = best_program(X.unsqueeze(0), environment=[]).squeeze(0)\n",
     "        X = Y\n",
     "    return path"
    ]
