--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -281,7 +281,7 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
     "    dsl=dsl,\n",
-    "    modules=ns.DictionaryHoleFiller(\n",
+    "    neural_hole_filler=ns.DictionaryHoleFiller(\n",
     "        {\n",
     "            **near.create_modules(\n",
     "                [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\"), t(\"($fL) -> {f, 1}\")],\n",
