--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_hole_filler = ns.DictionaryHoleFiller(\n",
+    "neural_hole_filler = near.DictionaryHoleFiller(\n",
     "    {\n",
     "        **near.create_modules(\n",
     "            [t(\"($fL) -> $fL\")],\n",
