--- a/tutorial/near_demo_regression_solutions_interface.ipynb
+++ b/tutorial/near_demo_regression_solutions_interface.ipynb
@@ -311,7 +311,7 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "\n",
     "\n",
-    "neural_modules = ns.DictionaryHoleFiller(\n",
+    "neural_modules = near.DictionaryHoleFiller(\n",
     "    {\n",
     "        **near.create_modules(\n",
     "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\"), t(\"($fL) -> {f, 1}\")],\n",
