--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -380,7 +380,7 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
     "    dsl=dsl,\n",
-    "    neural_hole_filler=ns.DictionaryHoleFiller(\n",
+    "    neural_hole_filler=near.DictionaryHoleFiller(\n",
     "        {\n",
     "            **near.create_modules(\n",
     "                [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\")],\n",
