reduce use of dictionary

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -194,17 +194,15 @@
    "source": [
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_hole_filler = near.DictionaryHoleFiller(\n",
-    "    {\n",
-    "        **near.create_modules(\n",
-    "            [t(\"($fL) -> $fL\")],\n",
-    "            near.mlp_factory(hidden_size=10),\n",
-    "        ),\n",
-    "        **near.create_modules(\n",
-    "            [t(\"([$fL]) -> [$fL]\")],\n",
-    "            near.rnn_factory_seq2seq(hidden_size=10),\n",
-    "        ),\n",
-    "    }\n",
+    "neural_hole_filler = near.UnionNeuralHoleFiller(\n",
+    "    near.create_modules(\n",
+    "        [t(\"($fL) -> $fL\")],\n",
+    "        near.mlp_factory(hidden_size=10),\n",
+    "    ),\n",
+    "    near.create_modules(\n",
+    "        [t(\"([$fL]) -> [$fL]\")],\n",
+    "        near.rnn_factory_seq2seq(hidden_size=10),\n",
+    "    ),\n",
     ")"
    ]
   },
