--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -380,17 +380,15 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
     "    dsl=dsl,\n",
-    "    neural_hole_filler=near.DictionaryHoleFiller(\n",
-    "        {\n",
-    "            **near.create_modules(\n",
-    "                [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\")],\n",
-    "                near.mlp_factory(hidden_size=10),\n",
-    "            ),\n",
-    "            **near.create_modules(\n",
-    "                [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\")],\n",
-    "                near.rnn_factory_seq2seq(hidden_size=10),\n",
-    "            ),\n",
-    "        }\n",
+    "    neural_hole_filler=near.UnionNeuralHoleFiller(\n",
+    "        near.create_modules(\n",
+    "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\")],\n",
+    "            near.mlp_factory(hidden_size=10),\n",
+    "        ),\n",
+    "        near.create_modules(\n",
+    "            [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\")],\n",
+    "            near.rnn_factory_seq2seq(hidden_size=10),\n",
+    "        ),\n",
     "    ),\n",
     ")"
    ]
