move to a hole filler class (#231)

--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -380,16 +380,16 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
     "    dsl=dsl,\n",
-    "    modules={\n",
-    "        **near.create_modules(\n",
+    "    neural_hole_filler=near.UnionNeuralHoleFiller(\n",
+    "        near.create_modules(\n",
     "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\")],\n",
     "            near.mlp_factory(hidden_size=10),\n",
     "        ),\n",
-    "        **near.create_modules(\n",
+    "        near.create_modules(\n",
     "            [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\")],\n",
     "            near.rnn_factory_seq2seq(hidden_size=10),\n",
     "        ),\n",
-    "    },\n",
+    "    ),\n",
     ")"
    ]
   },
