--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -194,16 +194,16 @@
    "source": [
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_modules = {\n",
-    "        **near.create_modules(\n",
-    "            [t(\"($fL) -> $fL\")],\n",
-    "            near.mlp_factory(hidden_size=10),\n",
-    "        ),\n",
-    "        **near.create_modules(\n",
-    "            [t(\"([$fL]) -> [$fL]\")],\n",
-    "            near.rnn_factory_seq2seq(hidden_size=10),\n",
-    "        ),\n",
-    "    }"
+    "neural_hole_filler = near.UnionNeuralHoleFiller(\n",
+    "    near.create_modules(\n",
+    "        [t(\"($fL) -> $fL\")],\n",
+    "        near.mlp_factory(hidden_size=10),\n",
+    "    ),\n",
+    "    near.create_modules(\n",
+    "        [t(\"([$fL]) -> [$fL]\")],\n",
+    "        near.rnn_factory_seq2seq(hidden_size=10),\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -224,14 +224,14 @@
     "interface.register_search_params(\n",
     "    dsl=dsl,\n",
     "    type_env=t,\n",
-    "    neural_modules=neural_modules,\n",
+    "    neural_hole_filler=neural_hole_filler,\n",
     "    search_strategy=ns.search.bounded_astar,\n",
     "    loss_callback=torch.nn.functional.mse_loss,\n",
     "    validation_params=dict(\n",
     "        enable_progress_bar=False,\n",
     "        enable_model_summary=False,\n",
     "        progress_by_epoch=True,\n",
-    "    )\n",
+    "    ),\n",
     ")"
    ]
   },
