--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -350,20 +350,24 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "neural_dsl = near.NeuralDSL.from_dsl(\n",
     "    dsl=dsl,\n",
-    "    modules={\n",
-    "        **near.create_modules(\n",
+    "    neural_hole_filler=near.UnionNeuralHoleFiller(\n",
+    "        near.create_modules(\n",
     "            [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\"), t(\"($fL) -> {f, 1}\")],\n",
     "            near.mlp_factory(hidden_size=10),\n",
     "        ),\n",
-    "        **near.create_modules(\n",
-    "            [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\"), t(\"([$fL]) -> [{f, 1}]\")],\n",
+    "        near.create_modules(\n",
+    "            [\n",
+    "                t(\"([$fL]) -> [$fL]\"),\n",
+    "                t(\"([$fL]) -> [$fO]\"),\n",
+    "                t(\"([$fL]) -> [{f, 1}]\"),\n",
+    "            ],\n",
     "            near.rnn_factory_seq2seq(hidden_size=10),\n",
     "        ),\n",
-    "        **near.create_modules(\n",
+    "        near.create_modules(\n",
     "            [t(\"([$fL]) -> $fL\"), t(\"([$fL]) -> {f, 1}\")],\n",
     "            near.rnn_factory_seq2class(hidden_size=10),\n",
     "        ),\n",
-    "    },\n",
+    "    ),\n",
     ")"
    ]
   },
