--- a/tutorial/near_demo_regression_solutions_interface.ipynb
+++ b/tutorial/near_demo_regression_solutions_interface.ipynb
@@ -311,20 +311,20 @@
     "t.typedef(\"fO\", \"{f, $O}\")\n",
     "\n",
     "\n",
-    "neural_modules={\n",
-    "    **near.create_modules(\n",
+    "neural_modules = near.UnionNeuralHoleFiller(\n",
+    "    near.create_modules(\n",
     "        [t(\"($fL) -> $fL\"), t(\"($fL) -> $fO\"), t(\"($fL) -> {f, 1}\")],\n",
     "        near.mlp_factory(hidden_size=10),\n",
     "    ),\n",
-    "    **near.create_modules(\n",
+    "    near.create_modules(\n",
     "        [t(\"([$fL]) -> [$fL]\"), t(\"([$fL]) -> [$fO]\"), t(\"([$fL]) -> [{f, 1}]\")],\n",
     "        near.rnn_factory_seq2seq(hidden_size=10),\n",
     "    ),\n",
-    "    **near.create_modules(\n",
+    "    near.create_modules(\n",
     "        [t(\"([$fL]) -> $fL\"), t(\"([$fL]) -> {f, 1}\")],\n",
-    "        near.rnn_factory_seq2class(hidden_size=10)\n",
-    "    )\n",
-    "}\n"
+    "        near.rnn_factory_seq2class(hidden_size=10),\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
