use create_modules less and use the neural hole filler more

--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -242,17 +242,7 @@
    "outputs": [],
    "source": [
     "t = ns.TypeDefiner(L=input_dim, O=output_dim)\n",
-    "t.typedef(\"fL\", \"{f, $L}\")\n",
-    "neural_hole_filler = near.UnionNeuralHoleFiller(\n",
-    "    near.create_modules(\n",
-    "        [t(\"($fL) -> $fL\")],\n",
-    "        near.mlp_factory(hidden_size=10),\n",
-    "    ),\n",
-    "    near.create_modules(\n",
-    "        [t(\"([$fL]) -> [$fL]\")],\n",
-    "        near.rnn_factory_seq2seq(hidden_size=10),\n",
-    "    ),\n",
-    ")"
+    "t.typedef(\"fL\", \"{f, $L}\")"
    ]
   },
   {
@@ -273,7 +263,7 @@
     "interface.register_search_params(\n",
     "    dsl=dsl,\n",
     "    type_env=t,\n",
-    "    neural_hole_filler=neural_hole_filler,\n",
+    "    neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10),\n",
     "    search_strategy=ns.search.bounded_astar,\n",
     "    loss_callback=torch.nn.functional.mse_loss,\n",
     "    validation_params=dict(\n",
