internalize cost to search graph

--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -457,10 +457,11 @@
     "        s=\"([{f, $L}]) -> [{f, $O}]\", env=ns.TypeDefiner(L=input_dim, O=output_dim)\n",
     "    ),\n",
     "    is_goal=lambda _: True,\n",
-    "    max_depth=max_depth\n",
+    "    max_depth=max_depth,\n",
+    "    cost=validation_cost,\n",
     ")\n",
     "\n",
-    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
+    "iterator = ns.search.bounded_astar(g, max_depth=max_depth)\n",
     "best_program_node = None\n",
     "try:\n",
     "    node = next(iterator)\n",
