--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -533,11 +533,12 @@
     "    ),\n",
     "    is_goal=lambda _: True,\n",
     "    max_depth=max_depth,\n",
+    "    cost=validation_cost,\n",
     ")\n",
     "# END SOLUTION\n",
     "\n",
     "# BEGIN SOLUTION iterator = ______  # TODO: Instantiate the bounded astar search algorithm\n",
-    "iterator = ns.search.bounded_astar(g, validation_cost, max_depth=max_depth)\n",
+    "iterator = ns.search.bounded_astar(g, max_depth=max_depth)\n",
     "# END SOLUTION\n",
     "best_program_nodes = []\n",
     "# Let's collect the top four programs\n",
