delete a variety of obsolete parameters

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -207,7 +207,6 @@
     "    output_dim=output_dim,\n",
     "    max_depth=max_depth,\n",
     "    lr=5e-3,\n",
-    "    max_seq_len=300,\n",
     "    n_epochs=100,\n",
     "    accelerator=\"cpu\",\n",
     ")\n",
@@ -217,11 +216,7 @@
     "    neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10),\n",
     "    search_strategy=ns.search.bounded_astar,\n",
     "    loss_callback=torch.nn.functional.mse_loss,\n",
-    "    validation_params=dict(\n",
-    "        enable_progress_bar=False,\n",
-    "        enable_model_summary=False,\n",
-    "        progress_by_epoch=True,\n",
-    "    ),\n",
+    "    validation_params=dict(progress_by_epoch=True),\n",
     ")"
    ]
   },
