--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -343,13 +343,13 @@
     "g = ______  # TODO: Instantiate the search graph\n",
     "\n",
     "iterator = ______  # TODO: Instantiate the bounded astar search algorithm\n",
-    "best_program_nodes = []\n",
+    "best_programs = []\n",
     "# Let's collect the top four programs\n",
-    "while len(best_program_nodes) <= 3:\n",
+    "while len(best_programs) <= 3:\n",
     "    try:\n",
-    "        node = next(iterator)\n",
-    "        cost = validation_cost(node)\n",
-    "        best_program_nodes.append((node, cost))\n",
+    "        program = next(iterator)\n",
+    "        cost = validation_cost(program)\n",
+    "        best_programs.append((program, cost))\n",
     "    except StopIteration:\n",
     "        print(\"No more programs found.\")\n",
     "        break"
@@ -408,17 +408,17 @@
     "        plt.show()\n",
     "\n",
     "\n",
-    "best_program_nodes = sorted(best_program_nodes, key=lambda x: x[1])\n",
-    "for i, (node, cost) in enumerate(best_program_nodes):\n",
+    "best_programs = sorted(best_programs, key=lambda x: x[1])\n",
+    "for i, (program, cost) in enumerate(best_programs):\n",
     "    print(\n",
     "        \"({i}) Cost: {cost:.4f}, {program}\".format(\n",
-    "            i=i, program=ns.render_s_expression(node.program), cost=cost\n",
+    "            i=i, program=ns.render_s_expression(program), cost=cost\n",
     "        )\n",
     "    )\n",
     "\n",
-    "best_program_node = best_program_nodes[0]\n",
-    "print(ns.render_s_expression(best_program_node[0].program))\n",
-    "plot_expression(best_program_node[0].program)"
+    "best_program, _ = best_programs[0]\n",
+    "print(ns.render_s_expression(best_program))\n",
+    "plot_expression(best_program)"
    ]
   },
   {
@@ -427,8 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_program_node = best_program_nodes[0]\n",
-    "module, _ = validation_cost.validate_model(best_program_node[0].program)\n",
+    "module, _ = validation_cost.validate_model(best_program)\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
@@ -446,7 +445,7 @@
     "plt.colorbar(label=\"Distance from origin\")\n",
     "plt.title(\n",
     "    \"Output heatmap\\n{program}\".format(\n",
-    "        program=ns.render_s_expression(best_program_node[0].program)\n",
+    "        program=ns.render_s_expression(best_program)\n",
     "    )\n",
     ")\n",
     "plt.xlabel(\"X-axis\")\n",
@@ -463,6 +462,13 @@
     "### Exercise\n",
     "*Does the output heatmap line up with the trajectory data we visualized in part 1? Does the program and the heatmap line up with our initial hypotheses?*"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
