--- a/tutorial/near_demo_regression_solutions_interface.ipynb
+++ b/tutorial/near_demo_regression_solutions_interface.ipynb
@@ -400,22 +400,22 @@
       "Training (output (map ??::<{f, 2} -> {f, 2}>))\n",
       "Training (output (map (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (linear)))\n",
+      "Validating (output (map (linear)))\n",
       "Training (map (sum))\n",
       "No parameters in program (map (sum))\n",
       "Training (map (linear_bool))\n",
+      "Validating (map (linear_bool))\n",
       "Training (output (map (ite (sum) ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (sum) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (sum) (linear) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (sum) (linear) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>))))\n",
       "Training (output (map (ite (sum) (linear) (linear))))\n",
+      "Validating (output (map (ite (sum) (linear) (linear))))\n",
       "Training (output (map (ite (linear_bool) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) (linear) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) (linear) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>))))\n",
       "Training (output (map (ite (linear_bool) (linear) (linear))))\n",
-      "Validating (output (map (linear)))\n",
-      "Validating (map (linear_bool))\n",
-      "Validating (output (map (ite (sum) (linear) (linear))))\n",
       "Validating (output (map (ite (linear_bool) (linear) (linear))))\n"
      ]
     }
@@ -488,8 +488,8 @@
     "    if ax is None:\n",
     "        plt.show()\n",
     "module = best_programs[0]\n",
-    "print(ns.render_s_expression(module.program))\n",
-    "plot_expression(module.program)"
+    "print(ns.render_s_expression(module.initalized_program.uninitialize()))\n",
+    "plot_expression(module.initalized_program.uninitialize())"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "plt.figure(figsize=(8, 6))\n",
     "plt.imshow(y, origin='lower', extent=(-3, 3, -3, 3), cmap='viridis')\n",
     "plt.colorbar(label=\"Distance from origin\")\n",
-    "plt.title(\"Output heatmap\\n{program}\".format(program=ns.render_s_expression(best_programs[0].program)))\n",
+    "plt.title(\"Output heatmap\\n{program}\".format(program=ns.render_s_expression(best_programs[0].initalized_program.uninitialize())))\n",
     "plt.xlabel(\"X-axis\")\n",
     "plt.ylabel(\"Y-axis\")\n",
     "plt.show()\n"
