--- a/tutorial/near_demo_regression_interface_skeleton.ipynb
+++ b/tutorial/near_demo_regression_interface_skeleton.ipynb
@@ -363,8 +363,8 @@
     "    if ax is None:\n",
     "        plt.show()\n",
     "module = best_programs[0]\n",
-    "print(ns.render_s_expression(module.program))\n",
-    "plot_expression(module.program)"
+    "print(ns.render_s_expression(module.initalized_program.uninitialize()))\n",
+    "plot_expression(module.initalized_program.uninitialize())"
    ]
   },
   {
@@ -387,7 +387,7 @@
     "plt.figure(figsize=(8, 6))\n",
     "plt.imshow(y, origin='lower', extent=(-3, 3, -3, 3), cmap='viridis')\n",
     "plt.colorbar(label=\"Distance from origin\")\n",
-    "plt.title(\"Output heatmap\\n{program}\".format(program=ns.render_s_expression(best_programs[0].program)))\n",
+    "plt.title(\"Output heatmap\\n{program}\".format(program=ns.render_s_expression(best_programs[0].initalized_program.uninitialize())))\n",
     "plt.xlabel(\"X-axis\")\n",
     "plt.ylabel(\"Y-axis\")\n",
     "plt.show()\n"
