no near interface on the bouncing ball

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -31,7 +31,8 @@
     "\n",
     "import logging\n",
     "import os\n",
-    "\n",
+    "import itertools\n",
+    "    \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
@@ -90,8 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_trajectory(trajectory, color):\n",
-    "    plt.scatter(trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color)\n",
+    "def plot_trajectory(trajectory, color, label=None):\n",
+    "    plt.scatter(trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color, label=label)\n",
     "    plt.plot(trajectory[:, 0], trajectory[:, 1], alpha=0.2, color=color)\n",
     "    plt.xlim(-5, 10)\n",
     "    plt.ylim(-5, 7)\n",
@@ -187,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run NEAR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -202,43 +210,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interface = near.NEAR(\n",
-    "    max_depth=max_depth,\n",
-    "    lr=5e-3,\n",
-    "    n_epochs=100,\n",
-    "    accelerator=\"cpu\",\n",
-    ")\n",
-    "interface.register_search_params(\n",
-    "    dsl=dsl,\n",
-    "    type_env=t,\n",
-    "    neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10),\n",
-    "    search_strategy=ns.search.bounded_astar,\n",
-    "    loss_callback=torch.nn.functional.mse_loss,\n",
-    "    validation_params=dict(progress_by_epoch=True),\n",
+    "neural_dsl = near.NeuralDSL.from_dsl(dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10))\n",
+    "g = near.validated_near_graph(\n",
+    "    neural_dsl,\n",
+    "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
+    "    is_goal=lambda x: True,\n",
+    "        cost=near.ValidationCost(\n",
+    "            trainer_cfg=near.NEARTrainerConfig(\n",
+    "            lr=0.1,\n",
+    "            n_epochs=100,\n",
+    "            accelerator=\"cpu\",\n",
+    "            loss_callback=nn.functional.mse_loss,\n",
+    "        ),\n",
+    "            neural_dsl=neural_dsl,\n",
+    "            datamodule=datamodule,\n",
+    "           progress_by_epoch=True,\n",
+    "        ),\n",
+    "    validation_epochs=4000,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run NEAR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "best_programs = interface.fit(\n",
-    "    datamodule=datamodule,\n",
-    "    program_signature=\"([{f, $L}]) -> [{f, $O}]\",\n",
-    "    n_programs=4,\n",
-    "    validation_max_epochs=4000,\n",
-    ")"
+    "best_programs = list(itertools.islice(ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3))"
    ]
   },
   {
@@ -300,11 +298,12 @@
    "source": [
     "plt.figure(figsize=(8, 8))\n",
     "\n",
-    "for i, trajectory in enumerate(trajectories):\n",
-    "    plot_trajectory(trajectory, f\"C{i}\")\n",
     "plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
+    "for i, (trajectory, prog) in enumerate(zip(trajectories, best_programs)):\n",
+    "    plot_trajectory(trajectory, f\"C{i}\", label=ns.render_s_expression(prog.initalized_program.uninitialize()))\n",
     "\n",
     "plt.title(\"Bouncing ball (ground truth in black)\")\n",
+    "plt.legend()\n",
     "plt.show()\n"
    ]
   }
